--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:5000/api
+# Production Backend URL
+VITE_API_BASE_URL=https://api.mibo.care/api
+
+# For local development, use:
+# VITE_API_BASE_URL=http://localhost:5000/api
